tests/compile_errors/004-not-callable.buzz
| Can't be called
enum Yo {
    mo,
    jo,
    lo,
}

test "Can't be called" {
    Yo("mo");
}